# nxi

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  coding_style.md  user-config.cmake  xmake.lua
.github/workflows/: nxi.yml
ci/: Dockerfile  qt_downloader
cmake/: utility.cmake
cmake/android/: android.cmake  android_apk.cmake  android_manifest.xml.in
doc/: bug.md  command.md  general.md  module.md
include/nxi/: action.hpp  buffer.hpp  buffer_group.hpp  command.hpp  config.hpp  context.hpp  cookie.hpp  core.hpp  database.hpp  error.hpp  log.hpp  module.hpp  notification_data.hpp  page.hpp  preprocessor.hpp  session.hpp  shortcut.hpp  style.hpp  style_data.hpp  suggestion.hpp  suggestion_vector.hpp  theme.hpp  type.hpp  user.hpp  user_session.hpp  utility.hpp  value.hpp  values.hpp  web_downloader.hpp  web_session.hpp  window.hpp  window_data.hpp
include/nxi/action/: command.hpp  goto.hpp  page.hpp  search.hpp  text.hpp  vector.hpp
include/nxi/command/: data.hpp  executor.hpp  fwd.hpp  initializer.hpp  input.hpp  parameter.hpp  params.hpp  shortcut_input.hpp
include/nxi/data/: config.hpp  config_struct.hpp  context.hpp  context_struct.hpp  cookie.hpp  cookie_struct.hpp  deinit.hpp  init.hpp  module.hpp  module_struct.hpp  navigation.hpp  navigation_struct.hpp  page.hpp  page_struct.hpp  session.hpp  session_struct.hpp  user.hpp  user_struct.hpp  window.hpp  window_struct.hpp
include/nxi/database/: command.hpp  config.hpp  context.hpp  field.hpp  model.hpp  module.hpp  page.hpp  persistent.hpp  result.hpp  session.hpp  window.hpp
include/nxi/module/: binary.hpp  platform.hpp  static.hpp.in  web.hpp
include/nxi/page/: custom.hpp  node.hpp  web.hpp
include/nxi/style/: w3c_mapping.hpp
include/nxi/suggestion/: basic.hpp  search.hpp  text.hpp  vector.hpp
include/nxi/system/: buffer.hpp  command.hpp  context.hpp  interface.hpp  module.hpp  navigation.hpp  notification.hpp  page.hpp  page.tpp  session.hpp  user.hpp  window.hpp
include/nxi/utility/: file.hpp  iterator.hpp  json_loader.hpp
include/nxw/: hbox_layout.hpp  icon_button.hpp  menu.hpp  tree.hpp
include/nxw/menu/: item.hpp
include/platform/: notification.hpp  window.hpp
include/platform/generic/: notification.hpp  window.hpp
include/platform/windows/: notification.hpp  window.hpp
include/stz/: observer_ptr.hpp
include/ui/: command.hpp  core.hpp  element.hpp  interface.hpp  menu.hpp  notification.hpp  page.hpp  renderer.hpp  renderer_view.hpp  user.hpp  user_session.hpp  utility.hpp  window.hpp
include/ui/command/: input.hpp  menu.hpp
include/ui/interface/: content.hpp  control_bar.hpp  home.hpp  main.hpp  page_bar.hpp
include/ui/page/: custom.hpp  node.hpp  web.hpp  web_engine.hpp  widget.hpp
include/ui/renderer/: qt3d.hpp  web.hpp  widget.hpp
include/ui/system/: interface.hpp  page.hpp  session.hpp  user.hpp  window.hpp
include/ui/view/: aboutgl.hpp  config.hpp  explorer.hpp  page_tree.hpp  renderer.hpp  web.hpp
include/w3c/: theme.hpp
include/w3c/module/: manifest.hpp
module/: static_module.hpp
module/static/adk/: CMakeLists.txt  adk.cpp  adk.hpp
module/static/nxi_static/: CMakeLists.txt  nxi_static.cpp  nxi_static.hpp
module/static/strateon/: strateon.cpp  strateon.hpp
module/strateon/: strateon.cpp
module/test/: CMakeLists.txt  test.cpp
module/theme/ffx/: manifest.json
module/theme/nebula_space/: manifest.json
module/theme/nxi/: manifest.json
module/theme/nxi_dark/: manifest.json
module/theme/nxi_light/: manifest.json
module/webextension/nxi_js/: manifest.json  test.js  test2.js
module/webextension/session_state/: background.js  manifest.json
module/webextension/test/: background.js  manifest.json  test.js
platform/: native_window.hpp  notification.hpp  window.hpp
platform/android/cmake/: android.cmake  android_apk.cmake  android_manifest.xml.in  qt_deploy.json.in
platform/android/source/: main.cpp  main.qml  qml.qrc  web_view.qml
platform/generic/: notification.hpp  window.cpp  window.hpp
platform/windows/: native_window.cpp  native_window.hpp  notification.hpp  window.cpp  window.hpp
resource/: image.qrc  page.qrc  script.qrc
resource/graphic/: style.qss
resource/page/: about.html
resource/script/: nxi.js
resource/script/js/: nxi.js
source/: main.cpp
source/module/test/: background.js  test.js
source/nxi/: buffer.cpp  buffer_group.cpp  command.cpp  core.cpp  database.cpp  log.cpp  module.cpp  page.cpp  session.cpp  style.cpp  suggestion.cpp  suggestion_vector.cpp  theme.cpp  user.cpp  user_session.cpp  values.cpp  web_downloader.cpp  web_session.cpp  window.cpp
source/nxi/action/: command.cpp  goto.cpp  page.cpp  search.cpp  text.cpp  vector.cpp
source/nxi/command/: executor.cpp  initializer.cpp  input.cpp  parameter.cpp  shortcut_input.cpp
source/nxi/commands/: context.cpp  main.cpp  page.cpp  session.cpp  settings.cpp  tool.cpp  user.cpp
source/nxi/data/: config.cpp  context.cpp  cookie.cpp  module.cpp  navigation.cpp  page.cpp  session.cpp  user.cpp  window.cpp
source/nxi/database/: page.cpp
source/nxi/module/: web.cpp
source/nxi/page/: node.cpp  web.cpp
source/nxi/suggestion/: search.cpp  text.cpp  vector.cpp
source/nxi/system/: buffer.cpp  command.cpp  context.cpp  interface.cpp  module.cpp  navigation.cpp  notification.cpp  page.cpp  session.cpp  user.cpp  window.cpp
source/nxi/utility/: json_loader.cpp
source/nxw/: icon_button.cpp  menu.cpp
source/nxw/menu/: item.cpp
source/platform/android/: main.cpp  qml.qrc
source/platform/generic/: notification.cpp
source/platform/windows/: notification.cpp  window.cpp
source/ui/: command.cpp  core.cpp  interface.cpp  menu.cpp  notification.cpp  renderer.cpp  renderer_view.cpp  user.cpp  user_session.cpp  web_view.cpp  window.cpp
source/ui/command/: input.cpp  menu.cpp
source/ui/interface/: content.cpp  control_bar.cpp  main.cpp  page_bar.cpp
source/ui/page/: node.cpp  web.cpp  web_engine.cpp  widget.cpp
source/ui/renderer/: web.cpp  (+1 more)
source/w3c/: manifest.cpp
tools/theme_converter/: main.cpp
(+44 files in other folders)
